# source-mcp

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml
docs/: .source-mcp_manifest.json  test.txt
docs/configs/: generated_file_11.json  generated_file_15.json  generated_file_19.json  generated_file_23.json  generated_file_27.json  generated_file_3.json  generated_file_31.json  generated_file_35.json  generated_file_39.json  generated_file_43.json  generated_file_47.json  generated_file_51.json  generated_file_55.json  generated_file_59.json  generated_file_7.json
docs/guides/: generated_file_1.md  generated_file_13.md  generated_file_17.md  generated_file_21.md  generated_file_25.md  generated_file_29.md  generated_file_33.md  generated_file_37.md  generated_file_41.md  generated_file_45.md  generated_file_49.md  generated_file_5.md  generated_file_53.md  generated_file_57.md  generated_file_9.md
docs/logs/: generated_file_10.txt  generated_file_14.txt  generated_file_18.txt  generated_file_2.txt  generated_file_22.txt  generated_file_26.txt  generated_file_30.txt  generated_file_34.txt  generated_file_38.txt  generated_file_42.txt  generated_file_46.txt  generated_file_50.txt  generated_file_54.txt  generated_file_58.txt  generated_file_6.txt
src/: config.py  main.py
src/services/: file_filter.py  indexer.py  monitor.py
src/web/: app.py
test_1536/: del.0  manifest.1
test_openai_zvec/: del.0  manifest.0
tests/: test_api.py  test_chunker.py  test_e2e_real.py  test_file_filter.py  test_indexer.py  test_integration.py
(+22 files in other folders)
