[project]
name = "source-mcp"
version = "0.1.2"
description = "A Model Context Protocol (MCP) server for semantic search and Retrieval-Augmented Generation (RAG) over local codebases and documents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.129.0",
    "fastembed>=0.7.4",
    "jinja2>=3.1.6",
    "mcp[cli]>=1.26.0",
    "openai>=2.21.0",
    "pathspec>=1.0.4",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "watchdog>=6.0.0",
    "zvec>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/web/templates" = "src/web/templates"

[project.scripts]
source-mcp = "src.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
